fix: letter spacing in about

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -136,13 +136,14 @@
   }
 
   .aboutItem h3 {
-    font-size: 2rem;
+    font-size: 2.4rem;
     margin-bottom: 1.6rem;
   }
 
   .aboutItem p {
     font-size: 1.6rem;
-    line-height: 1.6;
+    line-height: 1.5;
+    letter-spacing: 1px;
   }
 
   .icons {
